Fix relative spacing of submit buttons

--- a/src/ui/Question.module.css
+++ b/src/ui/Question.module.css
@@ -114,7 +114,7 @@
   border-radius: 12px;
   color: #fff;
   cursor: pointer;
-  flex-grow: 1;
+  flex-basis: 100%;
 }
 
 .submit:last-child {
